package behavioral.Observer.BT6;

public interface PlayerDataListener {
    void listen(PlayerData data);
}
